--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -408,7 +408,7 @@
   <string name="RECORD_INFO_1">Video für 24 Stunden einsetzen</string>
   <string name="RECORD_INFO_2">Nie Video aufnehmen</string>
   <string name="RECORD_MODE">Ungewöhnliches erkannt</string>
-  <string name="RECORD_MODE_1">24 Stunden</string>
+  <string name="RECORD_MODE_1">Den ganzen Tag</string>
   <string name="RECORD_MODE_2">Nie</string>
   <string name="RECORD_MODE_CHANGE">Es ist jetzt im Modus Zuhause, Bewegungserkennung bereits geschlossen, möchten Sie einschalten, bitte den Modus wechseln?</string>
   <string name="RECORD_NO_FIND">Kein Video in diesem Zeitraum</string>
@@ -515,7 +515,7 @@
   <string name="SETTINGS_Wechat_Switch_Open">Bitte konzentriere dich auf das WeChat&#8211;Konto \"加菲狗官微服务\" und binden, nach dem Erfolg des alten WeChat&#8211;Kontos wird die Meldung nicht mehr erhalten</string>
   <string name="SETTING_DIRECTION">Richtung des Videos</string>
   <string name="SETTING_FREE">Bewegungserkennung und Alarm vom Einzelgerät einstellen</string>
-  <string name="SETTING_RECORD">Automatische Videoaufnahme</string>
+  <string name="SETTING_RECORD">Video&#8211;Einstellungen</string>
   <string name="SETTING_SD">Micro SD&#8211;Karte</string>
   <string name="SETTING_TIMEZONE">Zeitzone einstellen</string>
   <string name="SET_NEW_PWD">Neues Passwort erstellen</string>
@@ -674,7 +674,7 @@
   <string name="Tap1_CameraFun_Timelapse_document">Zeitrafferaufnahme einschalten um mehr Highlight zu erwerben</string>
   <string name="Tap1_CameraFun_Timelapse_hours">% Stunde(n)</string>
   <string name="Tap1_CameraFun_UninitializedTips">Mikro&#8211;SD&#8211;Karte lesen gescheitert</string>
-  <string name="Tap1_CameraFun_VideoDirection">umgedreht (Bild umdrehen)</string>
+  <string name="Tap1_CameraFun_VideoDirection">Umkehren</string>
   <string name="Tap1_Camera_BackLiveTips">Zurück zu live</string>
   <string name="Tap1_Camera_Front">Vorderseite</string>
   <string name="Tap1_Camera_FrontTips">Die Betrachtung mit horizontalem Winkel muss ein breites Sehvermögen vor der Kamera beibehalten</string>
