--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -408,7 +408,7 @@
   <string name="RECORD_INFO_1">Bật video 24/7</string>
   <string name="RECORD_INFO_2">Tắt video bất cứ lúc nào</string>
   <string name="RECORD_MODE">Phát hiện chuyển động</string>
-  <string name="RECORD_MODE_1">24 giờ</string>
+  <string name="RECORD_MODE_1">Cả ngày</string>
   <string name="RECORD_MODE_2">Không bao giờ</string>
   <string name="RECORD_MODE_CHANGE">Khu vực bạn chọn \"At Home\", phát hiện chuyển động tắt. Nếu bạn muốn sử dụng, hãy tiếp tục</string>
   <string name="RECORD_NO_FIND">Không có video nào lúc này</string>
@@ -515,7 +515,7 @@
   <string name="SETTINGS_Wechat_Switch_Open">Hãy tập trung vào tài khoản WeChat \"加菲狗官微服务\" và ràng buộc, sau khi thành công của tài khoản WeChat cũ sẽ không còn nhận được thông báo push</string>
   <string name="SETTING_DIRECTION">Hướng video</string>
   <string name="SETTING_FREE">Cài phát hiện chuyển động và báo động của thiết bị</string>
-  <string name="SETTING_RECORD">Đang lưu Video</string>
+  <string name="SETTING_RECORD">Cài đặt video</string>
   <string name="SETTING_SD">Thẻ nhớ Micro SD</string>
   <string name="SETTING_TIMEZONE">Vùng thời gian</string>
   <string name="SET_NEW_PWD">Cài mật khẩu mới</string>
